# eil-calc

./: .gitignore  ArcGIS REST endpoints.md  README.md  RFC_001-EIL-CALC.md  api.py  calculate_depositional_safety.py  cli.py  code_review_2026-03-06.md  eil_status.py  eil_types.py  generate_gt_ledger.py  generate_mock_parcels.py  gt_parcel_ledger.csv  handover.md  hybrid_engine.py  main.py  orchestrator.py  pyproject.toml  session_log.md  slope_stability.py  smart_fetcher.py  start.bat  tech-spec_ADR.md  test_eil_calc.py  test_ground_truth.py  test_integration.py  test_orchestrator.py
test_fixtures/: ifsar_tile.tif
tests/ground_truth/prone/: 18815.geojson  18851.geojson
tests/ground_truth/safe/: 17802.geojson  18326.geojson  18513.geojson  18514.geojson  18524.geojson  18525.geojson  18543.geojson  18568.geojson  18592.geojson  18593.geojson  18596.geojson  18632.geojson  18634.geojson  18646.geojson  18659.geojson  18662.geojson  18705.geojson  18707.geojson  18805.geojson  18824.geojson  18833.geojson  18847.geojson  18859.geojson  8665.geojson
tests/ground_truth/susceptible/: 13567.geojson  13569.geojson  13582.geojson  13596.geojson  13739.geojson  13929.geojson  14936.geojson  17803.geojson  18060.geojson  18067.geojson  18101.geojson  18177.geojson  18193.geojson  18223.geojson  18268.geojson  18643.geojson  18684.geojson  18708.geojson  18772.geojson  18782.geojson  18785.geojson  18799.geojson  18816.geojson  18817.geojson  18841.geojson  18853.geojson  18923.geojson  18933.geojson  18947.geojson  18948.geojson  18960.geojson  18984.geojson  18986.geojson  (+2 more)
(+3 files in other folders)
