[project]
name = "eil-calc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.1",
    "rasterio>=1.4.4",
    "shapely>=2.1.2",
]

[project.scripts]
eil-calc = "cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require the IfSAR tile fixture (deselect with '-m not integration')",
]
