[project]
name = "eil-calc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.1",
    "pyproj>=3.7.2",
    "rasterio>=1.4.4",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "shapely>=2.1.2",
]

[project.scripts]
eil-calc = "cli:main"

[dependency-groups]
dev = [
    "geopandas>=1.1.2",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require the IfSAR tile fixture (deselect with '-m not integration')",
]
